--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -2,6 +2,10 @@ spark.executor.memory	{{spark_worker_mem}}
 spark.executor.extraLibraryPath	/root/ephemeral-hdfs/lib/native/
 spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 
+# TODO: spark.eventLog.enabled true
+# TODO: spark.eventLog.dir file:///root/spark/logs
+# TODO: spark.history.fs.logDirectory file:///root/spark/logs
+
 # for spark version < 1.4.0
 spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
