--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -2,11 +2,14 @@ spark.executor.memory	{{spark_worker_mem}}
 spark.executor.extraLibraryPath	/root/ephemeral-hdfs/lib/native/
 spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 
-# TODO: spark.eventLog.enabled true
-# TODO: spark.eventLog.dir file:///root/spark/logs
-# TODO: spark.history.fs.logDirectory file:///root/spark/logs
+# history
+spark.eventLog.enabled true
+spark.eventLog.compress true
+spark.eventLog.dir file:///mnt/spark-events
+spark.history.fs.logDirectory file:///mnt/spark-events
 
-# for spark version < 1.4.0
-spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
+
+# Disable progress bar in console
+spark.ui.showConsoleProgress false
