hadoop native library LD_LIBRARY_PATH, move spark-logs to hdfs

--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -5,8 +5,8 @@ spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 # history
 spark.eventLog.enabled true
 spark.eventLog.compress true
-spark.eventLog.dir file:///mnt/spark-events
-spark.history.fs.logDirectory file:///mnt/spark-events
+spark.eventLog.dir hdfs:///spark-logs
+spark.history.fs.logDirectory hdfs:///spark-logs
 
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
