--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -9,7 +9,7 @@ spark.eventLog.dir hdfs:///spark-logs
 spark.history.fs.logDirectory hdfs:///spark-logs
 
 # for spark version >= 1.4.0
-spark.externalBlockStore.url tachyon://{{active_master}}:19998
+spark.externalBlockStore.url alluxio://{{active_master}}:19998
 
 # Disable progress bar in console
 spark.ui.showConsoleProgress false
